<resources>
    <string name="app_name">FlightApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="or">or</string>
    <string name="register">Sign Up</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="update">Update</string>
    <string name="sign_out">Sign Out</string>
    <string name="can_not_empty">Can not be empty.</string>
    <string name="invalid_email">Invalid Email.</string>
    <string name="invalid_password">Password can not be lower than 6.</string>
    <string name="email_exist_message">This address is being used by another account</string>
    <string name="require_login_message">You need to re-login for changing your Email.</string>
    <string name="wrong_password">Wrong Password.</string>
    <string name="user_not_found">User not found.</string>
    <string name="flight_duration_time">%1$dh %2$dm</string>
    <string name="flight">Flight: %1$s</string>
    <string name="terminal">Terminal: %1$s</string>
    <string name="gate">Gate: %1$s</string>
    <string name="seat">Seat: %1$s</string>
    <string name="airports">Airports</string>
    <string name="profile">Profile</string>
    <string name="flights">Flights</string>


</resources>